--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -54,4 +54,4 @@ jobs:
         echo "$SSH_PRIVATE_KEY" > private_key
         chmod 600 private_key
         scp -o StrictHostKeyChecking=no -i private_key myapp $SERVER_USER@$SERVER_HOST:$SERVER_PATH
-        ssh -o StrictHostKeyChecking=no -i private_key $SERVER_USER@$SERVER_HOST "chmod +x $SERVER_PATH/myapp && $SERVER_PATH/myapp"
+        ssh -o StrictHostKeyChecking=no -i private_key $SERVER_USER@$SERVER_HOST "cd $SERVER_PATH && nohup ./myapp > app.log 2>&1 &"
