--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,9 +39,14 @@ jobs:
         path: myapp
 
   deploy:
-    runs-on: ubuntu-latest
-    needs: build # Faz o deploy depender do build
-    steps:
+  runs-on: ubuntu-latest
+  needs: build
+  strategy:
+    matrix:
+      server:
+        - { name: "server-1", host: "${{ secrets.SERVER_HOST_1 }}" }
+        - { name: "server-2", host: "${{ secrets.SERVER_HOST_2 }}" }
+  steps:
     - name: Download artifact
       uses: actions/download-artifact@v4
       with:
@@ -51,26 +56,15 @@ jobs:
     - name: Set executable permissions
       run: chmod +x myapp
     
-    - name: Deploy to server 1
+    - name: Deploy to ${{ matrix.server.name }}
       env:
         SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
         SERVER_USER: ${{ secrets.SERVER_USER }}
-        SERVER_HOST: ${{ secrets.SERVER_HOST_1 }}
+        SERVER_HOST: ${{ matrix.server.host }}
         SERVER_PATH: ${{ secrets.SERVER_PATH }}
       run: |
         echo "$SSH_PRIVATE_KEY" > private_key
         chmod 600 private_key
-        scp -o StrictHostKeyChecking=no -i private_key myapp $SERVER_USER@$SERVER_HOST_1:$SERVER_PATH
-        ssh -o StrictHostKeyChecking=no -i private_key $SERVER_USER@$SERVER_HOST_1 "sudo systemctl restart myapp.service"
-
-    - name: Deploy to server 2
-      env:
-        SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
-        SERVER_USER: ${{ secrets.SERVER_USER }}
-        SERVER_HOST: ${{ secrets.SERVER_HOST_2 }}
-        SERVER_PATH: ${{ secrets.SERVER_PATH }}
-      run: |
-        echo "$SSH_PRIVATE_KEY" > private_key
-        chmod 600 private_key
-        scp -o StrictHostKeyChecking=no -i private_key myapp $SERVER_USER@$SERVER_HOST_2:$SERVER_PATH
-        ssh -o StrictHostKeyChecking=no -i private_key $SERVER_USER@$SERVER_HOST_2 "sudo systemctl restart myapp.service"
+        scp -o StrictHostKeyChecking=no -i private_key myapp $SERVER_USER@$SERVER_HOST:$SERVER_PATH
+        ssh -o StrictHostKeyChecking=no -i private_key $SERVER_USER@$SERVER_HOST "sudo systemctl restart myapp.service"
+        rm -f private_key
