--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
----
+
 name: Go API CI/CD Pipeline
 on:
   workflow_dispatch: null
@@ -30,16 +30,15 @@ jobs:
         with:
           name: myapp-binary
           path: myapp
+  
   deploy:
     runs-on: ubuntu-latest
     needs: build
     strategy:
       matrix:
         server:
-          - name: server-1
-            host: ${{ secrets.SERVER_HOST_1 }}
-          - name: server-2
-            host: ${{ secrets.SERVER_HOST_2 }}
+          - 1
+          - 2
     steps:
       - name: Download artifact
         uses: actions/download-artifact@v4
@@ -48,11 +47,12 @@ jobs:
           path: ./
       - name: Set executable permissions
         run: chmod +x myapp
-      - name: Deploy to ${{ matrix.server.name }}
+      - name: Deploy to server-${{ matrix.server }}
         env:
           SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
           SERVER_USER: ${{ secrets.SERVER_USER }}
-          SERVER_HOST: ${{ matrix.server.host }}
+          SERVER_HOST: ${{ matrix.server == 1 && secrets.SERVER_HOST_1 ||
+            secrets.SERVER_HOST_2 }}
           SERVER_PATH: ${{ secrets.SERVER_PATH }}
         run: >
           echo "$SSH_PRIVATE_KEY" > private_key
@@ -64,3 +64,4 @@ jobs:
           ssh -o StrictHostKeyChecking=no -i private_key $SERVER_USER@$SERVER_HOST "sudo systemctl restart myapp.service"
 
           rm -f private_key
+
