--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -60,18 +60,22 @@ jobs:
           SERVER_USER: ${{ secrets.SERVER_USER }}
           SERVER_HOST: ${{ matrix.server == 1 && secrets.SERVER_HOST_1 || secrets.SERVER_HOST_2 }}
           SERVER_PATH: ${{ secrets.SERVER_PATH }}
-        run: >
-          echo "$SSH_PRIVATE_KEY" > private_key
 
-                chmod 600 private_key
-
-                ssh -o StrictHostKeyChecking=no -i private_key $SERVER_USER@$SERVER_HOST "sudo systemctl stop myapp.service"
-
-                ssh -o StrictHostKeyChecking=no -i private_key $SERVER_USER@$SERVER_HOST "sudo rm /opt/myapp/myapp"
-                
-                scp -o StrictHostKeyChecking=no -i private_key myapp $SERVER_USER@$SERVER_HOST:$SERVER_PATH
-
-                ssh -o StrictHostKeyChecking=no -i private_key $SERVER_USER@$SERVER_HOST "sudo systemctl start myapp.service"
+        run: |
+        
+          # Parar o serviço antes de copiar o binário
+          ssh -o StrictHostKeyChecking=no -i private_key $SERVER_USER@$SERVER_HOST "sudo systemctl stop myapp.service"
+          
+          # Remover o binário antigo ou ajustar permissões
+          ssh -o StrictHostKeyChecking=no -i private_key $SERVER_USER@$SERVER_HOST "sudo rm -f $SERVER_PATH/myapp || sudo chmod 664 $SERVER_PATH/myapp"
+          
+          # Copiar o novo binário
+          scp -o StrictHostKeyChecking=no -i private_key myapp $SERVER_USER@$SERVER_HOST:$SERVER_PATH
+          
+          # Ajustar permissões e reiniciar o serviço
+          ssh -o StrictHostKeyChecking=no -i private_key $SERVER_USER@$SERVER_HOST "sudo chmod +x $SERVER_PATH/myapp && sudo systemctl start myapp.service"
+          
+          rm private_key
 
               
 
