--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -63,8 +63,11 @@ jobs:
 
         run: |
         
+          echo ${SSH_PRIVATE_KEY} > private_key
+          chmod 600 private_key
+
           # Parar o serviço antes de copiar o binário
-          ssh -o StrictHostKeyChecking=no -i $SSH_PRIVATE_KEY $SERVER_USER@$SERVER_HOST "sudo systemctl stop myapp.service"
+          ssh -o StrictHostKeyChecking=no -i private_key $SERVER_USER@$SERVER_HOST "sudo systemctl stop myapp.service"
           
           # # Remover o binário antigo ou ajustar permissões
           # ssh -o StrictHostKeyChecking=no -i private_key $SERVER_USER@$SERVER_HOST "sudo rm -f $SERVER_PATH/myapp || sudo chmod 664 $SERVER_PATH/myapp"
