--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -62,23 +62,23 @@ jobs:
           SERVER_PATH: ${{ secrets.SERVER_PATH }}
 
         run: |
-        
-          echo ${SSH_PRIVATE_KEY} > private_key
-          chmod 600 private_key
 
-          # Parar o serviço antes de copiar o binário
-          ssh -o StrictHostKeyChecking=no -i private_key $SERVER_USER@$SERVER_HOST "sudo systemctl stop myapp.service"
+          # Install SSH client
+          sudo apt-get update
+          sudo apt-get install -y openssh-client
+
+          # Add SSH key to the agent
+          eval $(ssh-agent -s)
+          echo "$SSH_PRIVATE_KEY" | tr -d '\r' | ssh-add -
+
+          # Copy the binary to the server
+          scp -o StrictHostKeyChecking=no myapp $SERVER_USER@$SERVER_HOST:$SERVER_PATH
+
+          # Restart the service on the server
+          ssh -o StrictHostKeyChecking=no $SERVER_USER@$SERVER_HOST "sudo systemctl restart myapp.service"
+        
           
-          # # Remover o binário antigo ou ajustar permissões
-          # ssh -o StrictHostKeyChecking=no -i private_key $SERVER_USER@$SERVER_HOST "sudo rm -f $SERVER_PATH/myapp || sudo chmod 664 $SERVER_PATH/myapp"
-          
-          # # Copiar o novo binário
-          # scp -o StrictHostKeyChecking=no -i private_key myapp $SERVER_USER@$SERVER_HOST:$SERVER_PATH
-          
-          # # Ajustar permissões e reiniciar o serviço
-          # ssh -o StrictHostKeyChecking=no -i private_key $SERVER_USER@$SERVER_HOST "sudo chmod +x $SERVER_PATH/myapp && sudo systemctl start myapp.service"
-          
-          # rm private_key
+   
 
               
 
