--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -56,5 +56,7 @@ jobs:
           SERVER_HOST: ${{ secrets.SERVER_HOST_1 }}
           SERVER_PATH: ${{ secrets.SERVER_PATH }}
         run: |     
-          scp myapp -i $SSH_PRIVATE_KEY $SERVER_USER@$SERVER_HOST:$SERVER_PATH
+          echo "$SSH_PRIVATE_KEY" > private_key
+          chmod 600 private_key
+          scp myapp -i private_key $SERVER_USER@$SERVER_HOST:$SERVER_PATH
           
