--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,6 +41,11 @@ jobs:
   deploy:
     runs-on: self-hosted
     needs: build
+    strategy:
+      matrix:
+        server:
+          - 1
+          - 2
     steps:
       - name: Download artifact
         uses: actions/download-artifact@v4
@@ -49,12 +54,17 @@ jobs:
           path: ./
       - name: Set executable permissions
         run: chmod +x myapp
-      - name: Deploy to server-1
+      - name: Deploy to server-${{ matrix.server }}
         env:
+          SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
           SERVER_USER: ${{ secrets.SERVER_USER }}
-          SERVER_HOST: ${{ secrets.SERVER_HOST_1 }}
+          SERVER_HOST: ${{ matrix.server == 1 && secrets.SERVER_HOST_1 || secrets.SERVER_HOST_2 }}
           SERVER_PATH: ${{ secrets.SERVER_PATH }}
-        run: |     
-          
-          scp myapp $SERVER_USER@$SERVER_HOST:$SERVER_PATH
-          
+        run: >
+          echo "$SSH_PRIVATE_KEY" > private_key
+
+          chmod 600 private_key
+
+          scp -o StrictHostKeyChecking=no -i private_key myapp $SERVER_USER@$SERVER_HOST:$SERVER_PATH
+
+          ssh -o StrictHostKeyChecking=no -i private_key $SERVER_USER@$SERVER_HOST "sudo systemctl restart myapp.service"
