--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -60,15 +60,14 @@ jobs:
           SERVER_USER: ${{ secrets.SERVER_USER }}
           SERVER_HOST: ${{ matrix.server == 1 && secrets.SERVER_HOST_1 || secrets.SERVER_HOST_2 }}
           SERVER_PATH: ${{ secrets.SERVER_PATH }}
+          SERVICE_NAME: ${{ secrets.SERVICE_NAME }}
         run: >
           echo "$SSH_PRIVATE_KEY" > private_key
 
           chmod 600 private_key
-
-          #ssh -o StrictHostKeyChecking=no -i private_key $SERVER_USER@$SERVER_HOST "rm /opt/myapp/myapp"
-
+          
           ssh -o StrictHostKeyChecking=no -i private_key $SERVER_USER@$SERVER_HOST "rm $SERVER_PATH"
 
           scp -o StrictHostKeyChecking=no -i private_key myapp $SERVER_USER@$SERVER_HOST:$SERVER_PATH
 
-          ssh -o StrictHostKeyChecking=no -i private_key $SERVER_USER@$SERVER_HOST "sudo systemctl restart myapp.service"
+          ssh -o StrictHostKeyChecking=no -i private_key $SERVER_USER@$SERVER_HOST "sudo systemctl restart $SERVICE_NAME"
