--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -64,7 +64,7 @@ jobs:
         run: >
           #echo "$SSH_PRIVATE_KEY" > private_key
 
-          #chmod 600 private_key
+          chmod 600 $SSH_PRIVATE_KEY
           
           ssh -o StrictHostKeyChecking=no -i $SSH_PRIVATE_KEY $SERVER_USER@$SERVER_HOST "rm $SERVER_PATH"
 
